--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
