--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 	</parent>
 	<groupId>com.fiedormichal</groupId>
 	<artifactId>product-order</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>ProductOrder</name>
+	<packaging>jar</packaging>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
@@ -71,11 +71,7 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
